--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# VarFish installer
+.password-store/
+/inventories/production/group_vars/all/*.yml
+
+# Ansible
+.imported_roles/
+
 # Emacs
 *~
 
